# python_json_logger

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py
app/modules/: __init__.py
app/modules/logging/: __init__.py  internal.py
app/modules/logging/json/: __init__.py  json_logger.py  json_reader.py
app/modules/logging/text/: __init__.py  app_logger.py
app/tests/: __init__.py  exceptions.py  scenarios.py  test_json_logs.py
